Better handling of ACCESS and RELATE methods

--- a/FindUnusedTables/Properties/launchSettings.json
+++ b/FindUnusedTables/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "FindUnusedTables": {
       "commandName": "Project",
-      "commandLineArgs": "f:\\FindUnused"
+      "commandLineArgs": "F:\\SQLSRC\\sqlsource"
     }
   }
 }
